<resources>
    <string name="app_name">RoomKeys</string>
    <string name="loginsignup">Login/Sign Up</string>
    <string name="quote">"The house you looked at today and wanted to think about until tomorrow may be the same house someone looked at yesterday and will buy today."</string>
    <string name="allrights">All rights reserved.</string>
    <string name="wehavesent">We just send you a code</string>
    <string name="createprofile">Create your profile now</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">Can\'t access location permission</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Near me</string>
    <string name="title_notifications">Profile</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterpass">Enter password here</string>
    <string name="cpass">Confirm your password</string>
    <string name="enterotp">Enter 4 digits OTP</string>
    <string name="enternumberhere">Enter number here</string>
    <string name="password">Password</string>
    <string name="entername">Name</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="dob">D.O.B</string>
    <string name="dobenter">Add date of birth</string>
    <string name="gender">Gender</string>
    <string name="otptext">OTP sent sucessfully</string>
    <string name="resend">Resend</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="conpass">Confirm Password</string>
    <string name="enternamehere">Enter name here</string>
    <string name="title_activity_choose_location">Map</string>
    <string name="profile">Profile</string>
</resources>
