<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePassword">

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/layforpass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imagelogo1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/passwordlogo"
            android:tint="@android:color/white"></ImageView>

        <TextView
            android:id="@+id/ti"
            android:layout_marginTop="45dp"
            android:layout_marginStart="48dp"
            android:layout_below="@+id/imagelogo1"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/enterpass"
            android:textColor="@android:color/white"
            android:textSize="20dp"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ti"
            android:id="@+id/layoutTextInput"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="@color/grey">
            <EditText
                android:id="@+id/edtpass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/ti"
                android:imeOptions="actionNext"
                android:fontFamily="@font/gilroy_medium"
                android:drawableStart="@drawable/passlock"
                android:drawableTint="@color/grey"
                android:hint="@string/enterpass"
                android:textColorHint="@color/grey"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                android:drawablePadding="8dp"
                android:background="@drawable/edtback"
                android:textColor="@android:color/black"
                android:textSize="15dp">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ti2"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="48dp"
            android:layout_below="@+id/layoutTextInput"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/conpass"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/ti2"
            android:id="@+id/layoutTextInput1"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="@color/grey">
            <EditText
                android:id="@+id/edtcpass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/ti"
                android:imeOptions="actionNext"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/cpass"
                android:textColorHint="@color/grey"
                android:inputType="textPassword"
                android:drawableStart="@drawable/passlock"
                android:drawableTint="@color/grey"
                android:paddingStart="5dp"
                android:drawablePadding="8dp"
                android:background="@drawable/edtback"
                android:textColor="@android:color/black"
                android:textSize="15dp">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutTextInput1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:visibility="gone"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/quote"
            android:textAlignment="center"
            android:textColor="@android:color/white"></TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text5"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/progresslay"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                app:layout_anchorGravity="bottom|right|end">

                <ProgressBar
                    android:id="@+id/fabProgress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/yellow" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/nextbtnpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/white"
                    app:backgroundTint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_navigate_next_black_24dp"
                    android:layout_centerInParent="true" />

            </RelativeLayout>
            <TextView
                android:visibility="gone"
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progresslay"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="45dp"
                android:textSize="16dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/forgotpass"
                android:textAlignment="center"
                android:textColor="@android:color/black"></TextView>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/allrights"
            android:textAlignment="center"
            android:textSize="11dp"></TextView>

    </RelativeLayout>

</RelativeLayout>