<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword">
    <RelativeLayout
        android:id="@+id/layforotp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imagelogo12"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/otplogo"></ImageView>

        <TextView
            android:id="@+id/tiq"
            android:layout_marginTop="45dp"
            android:layout_marginStart="48dp"
            android:layout_below="@+id/imagelogo12"
            android:fontFamily="@font/gilroy_bold"
            android:text="OTP Verification"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/text12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagelogo12"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/enterotp"
            android:textColor="@android:color/white"
            android:textSize="20dp"></TextView>

        <com.goodiebag.pinview.Pinview
            android:layout_below="@+id/tiq"
            android:id="@+id/pinview"
            style="@style/PinView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:theme="@style/PinView"
            app:hint=""
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cursorVisible="true"
            app:forceKeyboard="false"
            app:inputType="number"
            app:pinBackground="@drawable/pinselect"
            app:password="false"
            app:pinHeight="45dp"
            app:pinLength="4"
            app:pinWidth="45dp"
            app:textSize="7dp" />

        <EditText
            android:id="@+id/edtotp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/tiq"
            android:layout_marginStart="45dp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/edtback"
            android:drawableTint="@color/grey"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center"
            android:hint="Enter 4 digit pin"
            android:textColorHint="@color/grey"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15dp"></EditText>

        <TextView
            android:id="@+id/text51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagelogo12"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/otptext"
            android:textAlignment="center"
            android:textColor="@android:color/black"></TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pinview"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/progresslayforotp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                app:layout_anchorGravity="bottom|right|end">

                <ProgressBar
                    android:id="@+id/fabProgressotp"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/colorAccent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/nextbtnotp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/white"
                    app:backgroundTint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_navigate_next_black_24dp"
                    android:layout_centerInParent="true" />

            </RelativeLayout>
            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progresslayforotp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="45dp"
                android:textSize="16dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/resend"
                android:textAlignment="center"
                android:textColor="@android:color/black"></TextView>

        </RelativeLayout>

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/allrights"
            android:textAlignment="center"
            android:textSize="11dp"></TextView>

    </RelativeLayout>

</RelativeLayout>