<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.Login"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <data>-->

<!--        <variable-->
<!--            name="user"-->
<!--            type="com.krys.classifiedproperty.model.Userlogin" />-->
<!--    </data>-->

    <RelativeLayout
        android:id="@+id/login"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:src="@drawable/bgbehind"></ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imagelogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/phonelogo"
                android:tint="@android:color/white"></ImageView>

            <TextView
                android:id="@+id/ti"
                android:layout_marginTop="45dp"
                android:layout_marginStart="48dp"
                android:layout_below="@+id/imagelogo"
                android:fontFamily="@font/gilroy_bold"
                android:text="Mobile Number"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <EditText
                android:id="@+id/edtphone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="45dp"
                android:layout_below="@+id/ti"
                android:layout_marginEnd="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edtback"
                android:drawableTint="@color/grey"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/enternumberhere"
                android:textColorHint="@color/grey"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="5dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/phone"
                android:textColor="@android:color/black"
                android:textSize="15dp"></EditText>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtphone"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="45dp"
                android:visibility="gone"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/quote"
                android:textAlignment="center"
                android:textColor="@android:color/white"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/text2"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:id="@+id/progresslay"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    app:layout_anchorGravity="bottom|right|end">

                    <ProgressBar
                        android:id="@+id/fabProgress"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:indeterminateTint="@color/yellow" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/nextbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/white"
                        android:elevation="0dp"
                        app:backgroundTint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_navigate_next_black_24dp"
                        android:layout_centerInParent="true" />

                </RelativeLayout>


                <Button
                    android:id="@+id/btn"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="85dp"
                    android:visibility="gone"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/btnback"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="Go"
                    android:textColor="@android:color/white"></Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/allrights"
                android:textAlignment="center"
                android:textSize="11dp"></TextView>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>